--- a/jenkins-ci-project/pom.xml
+++ b/jenkins-ci-project/pom.xml
@@ -31,6 +31,12 @@
         <publish.crx.password>admin</publish.crx.password>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar_source</sonar.jdbc.url>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+        <sonar.jdbc.password>sonar</sonar.jdbc.password>
+        <sonar.jdbc.driver>com.mysql.jdbc.Driver</sonar.jdbc.driver>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.exclusions></sonar.exclusions>
     </properties>
 
     <dependencyManagement>
