Updated the sponar config with the correct parameters.

--- a/jenkins-ci-project/sonar-project.properties
+++ b/jenkins-ci-project/sonar-project.properties
@@ -1,10 +1,10 @@
 # Required metadata
-sonar.projectKey=java-sonar-runner-simple
-sonar.projectName=Jenkins CI project analyzed with the SonarQube Runner
-sonar.projectVersion=1.0
+sonar.projectKey=jenkins-ci-project
+sonar.projectName=Jenkins CI project - Reactor Project
+sonar.projectVersion=1.0.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=bundle/src
+sonar.sources=jenkins-ci-project/bundle/src
 
 # Language
 sonar.language=java
